# bsdm-proxy

./: .cursorrules  .gitignore  .milestones-created  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  Makefile  NOTICE  OPENSEARCH_UPGRADE.md  OPTIMIZATIONS.md  README.md  README.md_old  docker-compose.awg.yml  docker-compose.clickhouse.yml  docker-compose.ha.yml  docker-compose.hierarchy.yml  docker-compose.legacy-opensearch.yml  docker-compose.lite.yml  docker-compose.performance.yml  docker-compose.pilot.yml  docker-compose.redis-l2.yml  docker-compose.test.yml  docker-compose.ultimate.yml  docker-compose.yml  dump.rdb  install.sh  setup.ps1  test_proxy.sh
.agents/: AGENTS.md
.cargo/: audit.toml
.githooks/: pre-push
.github/: labels-milestones.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/issue-bodies/: ch-default-compose.md  ch-dual-write.md  ch-grafana-dashboards.md  ch-indexer-metrics.md  ch-k8s-operator.md  ch-legacy-profile.md  ch-migration-epic.md  ch-reconciliation.md  ch-remove-opensearch.md  ch-search-api-ch.md
.github/workflows/: admin-console.yml  close-blockers.yml  docker-publish.yml  docs.yml  e2e.yml  load-test.yml  pr-blocker-hint.yml  release.yml  rust.yml  rust_2.yml  update-lockfile.yml  wiki-sync.yml
SDBM/: .gitkeep
admin-console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
admin-console/src/: App.tsx  index.css  main.tsx
alert-worker/: Cargo.toml
alert-worker/src/: clickhouse.rs  config.rs  dedupe.rs  entropy.rs  main.rs  metrics.rs  payload.rs  rules.rs  webhook.rs
alertmanager/: alertmanager.yml.tpl  entrypoint.sh
benchmarks/: compare-results.py  run-benchmarks.sh  vegeta-targets.txt  wrk-benchmark.lua
bpf/: xdp_drop.c
bsdm-events/: Cargo.toml
bsdm-events/src/: clickhouse.rs  lib.rs
bsdm-wasm-sdk/: Cargo.toml
bsdm-wasm-sdk/src/: lib.rs
cache-indexer/: .dockerignore  Cargo.toml  Dockerfile
cache-indexer/src/: admin_server.rs  clickhouse.rs  dual.rs  kafka.rs  kafka_ingest.rs  main.rs  metrics.rs  opensearch.rs  search_api.rs
cache-indexer/src/store/: memory.rs  mod.rs  sqlite.rs
cache-indexer/tests/: integration_test.rs
charts/bsdm/: Chart.yaml  README.md  values-analytics.yaml  values-prod.yaml  values.yaml
config/: .env.example  .gitignore  .gitkeep  README.md  acl-rules.example.json  acl-rules.test.json  categories.json  haproxy.cfg  prometheus.yml  proxy.pac
dns-sinkhole/: Cargo.toml
dns-sinkhole/src/: config.rs  dns.rs  doh_dot.rs  main.rs  server.rs  zone.rs
docs/: BLOCKERS.md  DASHBOARDS.md  HIERARCHICAL_CACHING_README.md  PERFORMANCE.md  README.md  acl.md  alerting.md  architecture.md  authentication.md  benchmarks-httparchive.md  capacity-planning.md  categorization.md  clickhouse-analytics.md  competitive-roadmap.md  control-plane.md  deployment.md  development.md  dns-sinkhole.md  docker.md  hierarchical-caching.md  icap.md  issue-tracker.md  k8s-architecture.md  kubernetes.md  licensing.md  lite.md  logging.md  maintenance.md  ml-security.md  performance.md  project-status.md  roadmap.md  search-api.md  semantic-cache.md  strategic-roadmap.md  structure.md  swg-backlog-mapping.md  wasm-plugins.md
docs/adr/: 0001-tiered-sharded-l1-cache.md  0002-clickhouse-analytics.md  0003-ml-worker-feature-store.md  0004-dns-sinkhole-sidecar.md
docs/analytics/: alerting.md  clickhouse-retrosearch.md  ml-security.md
docs/architecture/: capacity-planning.md  hierarchical-caching.md  overview.md  performance.md  structure.md
docs/features/: acl-policy.md  authentication.md  categorization.md  control-plane.md  dns-sinkhole.md  icap-inspection.md  semantic-cache.md  wasm-plugins.md
e2e/: Cargo.toml
e2e/src/: httparchive.rs  lib.rs
e2e/tests/: e2e.rs  hierarchy.rs  httparchive.rs  smoke.rs
grafana/: datasources.yml
ml-worker/: Cargo.toml
ml-worker/src/: baseline.rs  beacon.rs  clickhouse.rs  config.rs  features.rs  main.rs  metrics.rs  phishing.rs  scoring.rs  webhook.rs  writeback.rs
opensearch-dashboards/: setup-saved-objects.sh
packaging/: README.md  install.sh
prometheus/: prometheus.yml
proxy/: Cargo.phase3.toml  Cargo.toml  Dockerfile  build.rs
proxy/proto/: control_plane.proto
proxy/src/: acl.rs  acl_api.rs  acl_config.rs  amneziawg.rs  auth.rs  auth_config.rs  auth_sspi.rs  cache.rs  cache_body.rs  cache_compress.rs  cache_digest.rs  cache_freshness.rs  cache_key.rs  casb.rs  categorization.rs  category_engine.rs  control_api.rs  control_grpc.rs  dlp.rs  ebpf.rs  hierarchy.rs  hierarchy_config.rs  htcp.rs  http_types.rs  icap.rs  icp.rs  l2_cache.rs  lib.rs  main.rs  metrics.rs  miss_coalesce.rs  peer_discovery.rs  peer_fetch.rs  peers.rs  perf.rs  pipeline.rs  policy_cache.rs  policy_config.rs  proxy_service.rs  rate_limit.rs  (+15 more)
proxy/tests/: integration_test.rs
proxy/tests/common/: mod.rs
scripts/: bench-profile.sh  build-package.sh  check-doc-links.py  close-blocker-issue.sh  compare-squid-bsdm-httparchive.sh  compare-squid-bsdm.sh  configure-macos-proxy.sh  create-blocker-issues.sh  create-milestones.sh  diagnose-macos-proxy.sh  disable-macos-proxy.sh  download-ut1-blacklists.sh  extract-release-notes.sh  gen-awg-config.sh  gen-ca.sh  generate-mitm-ca.sh  httparchive-page-load.py  httparchive-sites-bench.py  httparchive-top1k-profile.json  httparchive_profile.py  install-binaries.sh  install-git-hooks.sh  interactive-install.sh  mock-upstream-httparchive.py  mock-upstream-threaded.py  mock-upstream.py  perf-profile.sh  pre-push-check.sh  reconcile-os-ch-events.sh  run-e2e-tests.sh  run-httparchive-bench-profiles.sh  run-httparchive-benchmark.sh  run-load-test.sh  run-profile-benchmark.sh  run-proxy-benchmark.sh  run-proxy-native.sh  run-smoke-tests.sh  setup-macos-browser-proxy.sh  squid-benchmark-mem.conf  squid-benchmark-tuned.conf  (+6 more)
web-config/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  entrypoint.sh  index.html  monitoring.html  monitoring.js  nginx.conf  requirements.txt  script.js  serve.py  styles.css  supervisord.conf
(+133 files in other folders)
