[workspace]
resolver = "2"
members = [
    "proxy",
    "cache-indexer",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opensearch = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.0"
