[workspace]
resolver = "2"
members = [
    "proxy",
    "cache-indexer",
    "e2e",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opensearch = "2.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.12"
