[workspace]
resolver = "2"
members = [
    "bsdm-events",
    "proxy",
    "cache-indexer",
    "e2e",
]

[workspace.dependencies]
bsdm-events = { path = "bsdm-events" }
tokio = { version = "1", features = ["full"] }
rdkafka = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
