[package]
name = "cache-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cache-indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opensearch = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }