[package]
name = "cache-indexer"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["BSDM-Proxy Contributors"]
description = "Kafka to ClickHouse indexer for HTTP cache events"
repository = "https://github.com/onixus/bsdm-proxy"
keywords = ["kafka", "clickhouse", "indexer", "cache"]
categories = ["database", "network-programming"]

[[bin]]
name = "cache-indexer"
path = "src/main.rs"

[dependencies]
bsdm-events = { workspace = true }
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
prometheus = "0.14"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
