[package]
name = "bsdm-proxy-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = { workspace = true }
http-body-util = "0.1"
hyper = { version = "1.10", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = { version = "0.14", features = ["x509-parser"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tokio-rustls = { version = "0.26", features = ["ring"] }
