[package]
name = "ml-worker"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["BSDM-Proxy Contributors"]
description = "ClickHouse feature extraction and threat scoring worker (M5)"
repository = "https://github.com/onixus/bsdm-proxy"
keywords = ["clickhouse", "ml", "anomaly", "security"]
categories = ["network-programming"]

[[bin]]
name = "ml-worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
prometheus = "0.14"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
