[package]
name = "bsdm-proxy"
version = "0.6.1-1"
edition = "2021"
license = "MIT"

# Binary targets
[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
bsdm-events = { workspace = true }
hyper = { version = "1.10", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
http-body = "1"
http-body-util = "0.1"
quick_cache = "0.7"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rand = "0.9"
rcgen = { version = "0.14", features = ["x509-parser"] }
rdkafka = { version = "0.39", optional = true }
prometheus = { version = "0.14", features = ["process"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12", "webpki-roots"] }
sha2 = "0.11"
base64 = "0.22"
url = "2.5"
bytes = "1.12"
memmap2 = "0.9"
socket2 = "0.5"
zstd = "0.13"
brotli = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
ldap3 = { version = "0.12", optional = true }
hex = "0.4"

# ACL and Categorization
regex = "1.12"
arc-swap = "1.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.13", features = ["json", "form"] }
encoding_rs = "0.8"
sspi = { version = "0.21.1", optional = true, features = ["network_client"] }
kerberos_keytab = { version = "0.0.3", optional = true }

# Optional gRPC control plane (feature `grpc`)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tower = { version = "0.5", optional = true }

# Optional Wasm plugin host (feature `wasm`)
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime", "wat"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[features]
default = ["auth-basic", "kafka"]
kafka = ["dep:rdkafka"]
grpc = ["dep:tonic", "dep:prost", "dep:tower", "dep:tonic-build"]
wasm = ["dep:wasmtime"]
auth-basic = []
auth-ldap = ["ldap3"]
auth-ntlm = ["sspi"]
auth-kerberos = ["sspi", "kerberos_keytab"]
auth-all = ["auth-ldap", "auth-ntlm", "auth-kerberos"]
acl = []
categorization = ["acl"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
